Replace player div with image element

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
       </div>
 
       <div id="player" class="player" style="left:46%;top:70%">
-        <div class="wing"></div>
-        <div style="z-index:2">A</div>
+        <img src="https://i.imgur.com/7W3G8hN.png" alt="traveller" style="width:44px;height:44px;z-index:2;position:relative" />
       </div>
 
     </div>
@@ -155,3 +154,4 @@ window._aq = { startGame, score: ()=>score, objects };
 </script>
 </body>
 </html>
+
